Added additional fields
